# cycle-consistent-federated-learning

./: README.md  pyproject.toml  simulate.py
cycle_consistent_federated_learning/: __init__.py  client_app.py  cycle_cons_strategy.py  server_app.py  task.py
notebooks/: plot_results.ipynb
results/: 10_clients_10_rounds_30_epochs_cyclecons.lst  10_clients_10_rounds_30_epochs_fedavg.lst  10_clients_50_rounds_20_epochs_cyclecons.lst  10_clients_50_rounds_20_epochs_fedavg.lst
