[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cycle-consistent-federated-learning"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.9.0,<2.0",
    "flwr-datasets[vision]>=0.0.2,<1.0.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "crisostomi"

[tool.flwr.app.components]
serverapp = "cycle_consistent_federated_learning.server_app:app"
clientapp = "cycle_consistent_federated_learning.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
local-epochs = 30

[tool.flwr.app.backend_config]
num_gpus = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10


